--- a/solicitar.html
+++ b/solicitar.html
@@ -280,8 +280,85 @@ const materialesLista = [
 "Telurómetro Megger DET4TCR2","Wattmetro Fluke 345"
 ];
 
-/* 🌟 AUTOCOMPLETADO PARA INPUTS DE MATERIAL */
-function enableAutocomplete(input) {
+/* 🌟 LISTA DE ASIGNATURAS */
+const asignaturasLista = [
+"Algoritmos y Programación Avanzada",
+"Análisis de Circuitos Eléctricos",
+"Análisis de Fallas en Sistemas Mecatrónicos",
+"Aplicaciones de Electromagnetismo",
+"Arquitectura de Comunicaciones Industriales",
+"Automatización Industrial",
+"Control con Inteligencia Artificial",
+"Control de Fluidos Industriales",
+"Control de Sistemas Electroneumáticos",
+"Conversión Electromecánica de la Energía",
+"Diseño Asistido por Computador",
+"Diseño de Proyectos Eléctricos en Baja Tensión",
+"Diseño de Proyectos Eléctricos en Media y Alta Tensión",
+"Electricidad Aplicada a la Automatización",
+"Electrónica Analógica y Digital",
+"Electrónica de Potencia y Accionamientos",
+"Electrónica de Potencia y Microredes",
+"Electrónica Programable e Instrumentación",
+"Energías Renovables No Convencionales",
+"Energías Renovables y Electromovilidad",
+"Evaluación de Proyectos de Ingeniería Eléctrica",
+"Fundamentos del Mantenimiento para la Automatización",
+"Gestión del Mantenimiento",
+"Integración de Redes Industriales",
+"Instalaciones Eléctricas en Baja Tensión",
+"Instalaciones Eléctricas Inteligentes",
+"Instrumentación Industrial",
+"Instrumentación Inteligente",
+"Inteligencia Artificial Aplicada al Mantenimiento",
+"Introducción a la Automatización y Robótica",
+"Máquinas Eléctricas y Accionamientos",
+"Mantenimiento de Circuitos Eléctricos y Electrónicos de Potencia",
+"Mantenimiento de Redes de Comunicación e Instrumentación de Campo",
+"Mantenimiento de Sistemas Hidráulicos y Neumáticos",
+"Mantenimiento de Sistemas Industriales Automatizados",
+"Mantenimiento de Sistemas Robóticos",
+"Mantenimiento Eléctrico-Instrumentista",
+"Manufactura Avanzada",
+"Mercado, Normativa y Calidad de Suministro",
+"Plataforma SCADA",
+"Programación Avanzada de Controladores",
+"Programación de Controladores",
+"Programación de PLC",
+"Programación Orientada a Industrias Digitales",
+"Proyecto de Título para la Automatización I",
+"Proyecto Eléctrico Integrado",
+"Proyectos de Ingeniería en Sistemas de Energía Eléctrica",
+"Proyectos Eléctricos Integrados",
+"Protecciones Eléctricas Avanzadas",
+"Protecciones Eléctricas y Puestas a Tierra",
+"Redes Eléctricas I",
+"Redes Eléctricas II",
+"Redes Eléctricas Inteligentes",
+"Redes Eléctricas y Subestaciones",
+"Redes y Subestaciones Eléctricas I",
+"Redes y Subestaciones Eléctricas II",
+"Robótica Aplicada a Procesos Industriales",
+"Robótica Avanzada",
+"Robótica Industrial",
+"Seguridad Industrial y Riesgos Eléctricos",
+"Seguridad y Riesgos Industriales",
+"Simulación y Control de Procesos Industriales",
+"Simulación y Diseño 3D",
+"Sistemas de Almacenamiento de Energía",
+"Sistemas de Control",
+"Sistemas de Control Avanzado y Distribuido",
+"Sistemas Eléctricos de Potencia",
+"Sistemas Eléctricos de Potencia I",
+"Sistemas Eléctricos de Potencia II",
+"Taller de Instalación y Mantenimiento de Sistemas Automatizados",
+"Taller de Operación y Mantenimiento de Sistemas Automatizados",
+"Telecomunicaciones y Conectividad",
+"Técnicas de Ultrasonido para Mantenimiento"
+];
+
+/* 🌟 AUTOCOMPLETADO PARA INPUTS (MATERIALES O ASIGNATURAS) */
+function enableAutocomplete(input, listaPersonalizada) {
     const lista = document.createElement("ul");
     lista.style.position = "absolute";
     lista.style.border = "1px solid #ccc";
@@ -296,18 +373,20 @@ function enableAutocomplete(input) {
     input.parentNode.style.position = "relative";
     input.parentNode.appendChild(lista);
 
+    const listaFinal = listaPersonalizada || materialesLista;
+
     input.addEventListener("input", () => {
         const val = input.value.toLowerCase();
         lista.innerHTML = '';
         if (!val) return;
-        materialesLista.filter(m => m.toLowerCase().includes(val))
-            .forEach(m => {
+        listaFinal.filter(item => item.toLowerCase().includes(val))
+            .forEach(item => {
                 const li = document.createElement("li");
-                li.textContent = m;
+                li.textContent = item;
                 li.style.padding = "5px";
                 li.style.cursor = "pointer";
-                li.onmousedown = () => { // para que funcione antes de perder focus
-                    input.value = m;
+                li.onmousedown = () => { 
+                    input.value = item;
                     lista.innerHTML = '';
                 };
                 lista.appendChild(li);
@@ -318,6 +397,14 @@ function enableAutocomplete(input) {
         setTimeout(() => { lista.innerHTML = ''; }, 100);
     });
 }
+
+/* 🌟 Activar autocompletado en input de asignatura */
+const inputAsignatura = document.getElementById("asignatura");
+enableAutocomplete(inputAsignatura, asignaturasLista);
+
+/* 🌟 Activar autocompletado en todos los inputs de material existentes */
+document.querySelectorAll("#tbody input[type=text]").forEach(input => enableAutocomplete(input));
+
 
 /* ➕ Añadir fila */
 function addRow() {
@@ -428,6 +515,11 @@ document.addEventListener("DOMContentLoaded", () => {
 
     // Activar autocompletado en todos los inputs de material
     document.querySelectorAll("#tbody input[type=text]").forEach(input => enableAutocomplete(input));
+
+    /* 🌟 Activar autocompletado en input de asignatura */
+const inputAsignatura = document.getElementById("asignatura");
+enableAutocomplete(inputAsignatura, asignaturasLista);
+    
 });
 </script>
 
