--- a/solicitar.html
+++ b/solicitar.html
@@ -184,6 +184,9 @@
     left: 0;
     margin-top: 0; /* eliminar margen extra */
 }
+.input-wrapper input:focus {
+    box-shadow: none;
+}
 </style>
 </head>
 <body>
