--- a/panel_admin.html
+++ b/panel_admin.html
@@ -285,7 +285,7 @@
         const SUPABASE_URL = "https://jwcgiuhdugjunndfpdjr.supabase.co";
         const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp3Y2dpdWhkdWdqdW5uZGZwZGpyIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NTA2NTQsImV4cCI6MjA3ODUyNjY1NH0.llknOTpK1hFMDOjdyDUKUFuiyr0NwwZzNv6YdJbBsRY";
 
-        // La librería Supabase ya está definida aquí porque la cargamos en el head
+        // Aquí el objeto Supabase ya está definido
         const supabase = Supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
         // Contenedores DOM
