--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 <div class="box hidden" id="registerBox">
     <h2>📝 Registro de Usuario</h2>
     <input type="text" id="regNombre" placeholder="👤 Nombre Completo">
-    <input type="text" id="regRut" placeholder="💳 RUT (Ej: 12.345.678-5)">
+    <input type="text" id="regRut" placeholder="💳 RUT (Ej: 12345678-5)">
     <p id="rutError" class="error"></p>
 
     <select id="regCarrera">
