--- a/panel_admin.html
+++ b/panel_admin.html
@@ -453,7 +453,7 @@
                     '<span>Fecha Solicitud: ' + formatDate(solicitud.fecha_solicitud) + '</span>' +
                 '</div>' +
                 // CORRECCIÓN CLAVE AQUÍ: El nombre del alias es 'usuario' (singular)
-                '<div class="card-detail"><label>Usuario:</label> ' + (solicitud.nombre_usuario || 'Desconocido') + '</div>' +
+                '<div class="card-detail"><label>Usuario:</label> ' + (solicitud.usuarios ? solicitud.usuarios.nombre : 'Desconocido') + '</div>' +
                 '<div class="card-detail"><label>Docente:</label> ' + solicitud.docente + '</div>' +
                 '<div class="card-detail"><label>Asignatura:</label> ' + solicitud.asignatura + '</div>' +
                 
