--- a/panel_admin.html
+++ b/panel_admin.html
@@ -444,7 +444,7 @@
                     '<span>Fecha Solicitud: ' + formatDate(solicitud.fecha_solicitud) + '</span>' +
                 '</div>' +
                 // USAMOS nombre_usuario que viene de la combinación de datos
-                '<div class="card-detail"><label>Usuario:</label> ' + (solicitud.nombre_usuario || 'Desconocido') + '</div>' +
+                '<div class="card-detail"><label>Usuario:</label> ' + (solicitud.email || 'Desconocido') + '</div>' +
                 '<div class="card-detail"><label>Docente:</label> ' + solicitud.docente + '</div>' +
                 '<div class="card-detail"><label>Asignatura:</label> ' + solicitud.asignatura + '</div>' +
                 
