--- a/panel_admin.html
+++ b/panel_admin.html
@@ -524,27 +524,37 @@
     }
 
 async function loadDashboardData() {
-        // PRIMERO: Obtener solicitudes con materiales
-        const { data: solicitudesData, error } = await supabaseClient
-            .from('solicitudes')
-            .select('*, materiales_solicitados (material, cantidad),usuarios (nombre, email)')
-            .order('fecha_solicitud', { ascending: false })
-            .limit(20);
+    // PRIMERO: Obtener solicitudes con materiales
+    const { data: solicitudesData, error } = await supabaseClient
+        .from('solicitudes')
+        .select('*, materiales_solicitados (material, cantidad),usuarios (nombre, email)')
+        .order('fecha_solicitud', { ascending: false })
+        .limit(20);
 
-        if (error) {
-            console.error('Error al cargar solicitudes:', error);
-            pendingContainer.innerHTML = '<p>Error al cargar datos. Verifique la conexión y las RLS de Supabase.</p>';
-            deliveredContainer.innerHTML = '<p>Error al cargar datos. Verifique la conexión y las RLS de Supabase.</p>';
-            return;
-        }
-
-        // CUARTO: Filtrar y mostrar
-        const pendingRequests = solicitudesData.filter(s => s.estado === 'Pendiente');
-        const deliveredRequestsToReview = solicitudesData.filter(s => s.estado === 'Entregado' && (!s.comentario_entrega  s.comentario_entrega === 'Sin Comentarios'  s.comentario_entrega === 'N/A')).slice(0, 10);
-
-        updateContainerDynamically(pendingContainer, pendingRequests, 'No hay solicitudes pendientes.');
-        updateContainerDynamically(deliveredContainer, deliveredRequestsToReview, 'No hay solicitudes entregadas pendientes de revisión de comentario.');
+    if (error) {
+        console.error('Error al cargar solicitudes:', error);
+        pendingContainer.innerHTML = '<p>Error al cargar datos. Verifique la conexión y las RLS de Supabase.</p>';
+        deliveredContainer.innerHTML = '<p>Error al cargar datos. Verifique la conexión y las RLS de Supabase.</p>';
+        return;
     }
+
+    // CUARTO: Filtrar y mostrar
+
+    // 1. Solicitudes Pendientes (sin cambios)
+    const pendingRequests = solicitudesData.filter(s => s.estado === 'Pendiente');
+
+    // 2. Solicitudes Entregadas Pendientes de Revisión de Comentario (CORREGIDO)
+    const deliveredRequestsToReview = solicitudesData.filter(s => 
+        s.estado === 'Entregado' && (
+            !s.comentario_entrega ||                     // Si es null, undefined, o string vacío
+            s.comentario_entrega === 'Sin Comentarios' || // O si tiene el texto predeterminado 1
+            s.comentario_entrega === 'N/A'                // O si tiene el texto predeterminado 2
+        )
+    ).slice(0, 10); // Limita a los primeros 10 para la revisión
+
+    updateContainerDynamically(pendingContainer, pendingRequests, 'No hay solicitudes pendientes.');
+    updateContainerDynamically(deliveredContainer, deliveredRequestsToReview, 'No hay solicitudes entregadas pendientes de revisión de comentario.');
+}
 
     // Cargar los datos al iniciar la página
     loadDashboardData();
